- Os dados da pontuacao record sao enviados para o servidor via http post. 	Ainda existe algum problema com o envio dos dados, tal vez mais de um. 	Um fato claro e que as informacoes guardadas no Preferences nao estao 	sendo completamente recuperadas.